# FastCycloneDdsCsharpBindings

./: .gitignore  .gitmodules  DetailedOverview.md  FastCycloneDdsCsharpBindings.sln  IDLJSON-TESTING-REQUIREMENTS.md  README.md  ROUNDTRIP-EXPANSION-SUMMARY.md  TestAttr.cs  build_and_run_tests.ps1  build_cyclone.bat  build_cyclone_debug.bat  build_roundtrip_tests.bat  find_exports.py  rebuild_all_csharp_to_c.bat  rebuild_csharptoc_native.bat  remedy-plan-status-update.md  remedy-plan-status.md  search_ddsc_exports.py
.dev-workstream/: DEV-LEAD-GUIDE.md  EXTERNAL-ANALYSIS-INTEGRATION-SUMMARY.md  STAGE-6-PLANNING-SUMMARY.md  TASK-TRACKER.md
.dev-workstream/batches/: BATCH-02-INSTRUCTIONS.md  BATCH-04-INSTRUCTIONS.md  BATCH-06-INSTRUCTIONS.md  BATCH-07-INSTRUCTIONS.md  BATCH-08-INSTRUCTIONS.md  BATCH-09-INSTRUCTIONS.md  BATCH-09.1-INSTRUCTIONS.md  BATCH-11-INSTRUCTIONS.md  BATCH-11.1-INSTRUCTIONS.md  BATCH-13-INSTRUCTIONS.md  BATCH-13.1-INSTRUCTIONS.md  BATCH-13.3-INSTRUCTIONS.md  BATCH-14-INSTRUCTIONS.md  BATCH-14.1-INSTRUCTIONS-SUMMARY.md  BATCH-14.1-INSTRUCTIONS.md  BATCH-15-INSTRUCTIONS.md  BATCH-15.1-INSTRUCTIONS.md  BATCH-15.2-INSTRUCTIONS.md  BATCH-16-INSTRUCTIONS.md  BATCH-19-INSTRUCTIONS.md  BATCH-22-INSTRUCTIONS.md  BATCH-25-INSTRUCTIONS.md  BATCH-29.1-INSTRUCTIONS.md  BATCH-30-INSTRUCTIONS.md
.dev-workstream/reports/: BATCH-02-REPORT.md  BATCH-04-REPORT.md  BATCH-06-REPORT.md  BATCH-07-REPORT.md  BATCH-08-REPORT.md  BATCH-09-REPORT.md  BATCH-11.1-REPORT.md  BATCH-13-REPORT.md  BATCH-13.2-REPORT.md  BATCH-14-REPORT.md  BATCH-15-REPORT.md  BATCH-15.1-REPORT.md  BATCH-15.2-REPORT.md  BATCH-16-REPORT.md  BATCH-19-REPORT.md  BATCH-21-REPORT.md  BATCH-22-REPORT.md
.dev-workstream/reviews/: BATCH-02-REVIEW.md  BATCH-04-REVIEW.md  BATCH-06-REVIEW.md  BATCH-07-REVIEW.md  BATCH-08-REVIEW.md  BATCH-09-REVIEW.md  BATCH-11-REVIEW.md  BATCH-11.1-REVIEW.md  BATCH-13-FINAL-ACCEPTANCE.md  BATCH-13-REVIEW.md  BATCH-13.1-REVIEW-ADDENDUM.md  BATCH-13.1-REVIEW.md  BATCH-13.2-FINAL-REVIEW.md  BATCH-14-REVIEW.md  BATCH-15-REVIEW.md  BATCH-15.1-REVIEW.md  BATCH-15.2-REVIEW.md  BATCH-16-REVIEW.md  BATCH-19-REVIEW.md  BATCH-29-REVIEW.md
.dev-workstream/tasks/: FCDC-034.md  FCDC-035.md  FCDC-036.md  FCDC-037.md  FCDC-038.md
cyclone-bin/Release/: cycloneddsidl.lib  ddsc.lib
cyclone-compiled/: version-info.txt
cyclone-compiled/lib/: cycloneddsidlc.lib  cycloneddsidljson.lib  ddsc.lib
debug_tool/: DebugOffsets.csproj  Program.cs
docs/: ADVANCED-OPTIMIZATIONS-DESIGN.md  ATOMIC-TESTS-IDLJSON-INTEGRATION.md  CDR-DISCOVERIES.md  CPP-BINDINGS-ANALYSIS.md  CPP-BINDINGS-KEYS-CDR.md  CSHARP-TO-C-ROUNDTRIP-DESIGN.md  CSHARP-VS-CPP-SERDATA-ANALYSIS.md  DDS-INTEGRATION-TEST-DESIGN.md  EXTERNAL-ARCHITECTURE-ANALYSIS-RESPONSE.md  FCDC-TASK-MASTER.md  FailingRoundtripTests.md  Fixing-csharp-to-native-issues.md  IDLJSON-DOCUMENTATION-INDEX.md  IDLJSON-IMPLEMENTATION-GUIDE.md  IDLJSON-INTEGRATION-GUIDE.md  IDLJSON-PLUGIN-DESIGN.md  IDLJSON-TRANSFORMATION-ROADMAP.md  IDLJSON-VERIFICATION-TEST-PLAN.md  IMPLEMENTATION-SUMMARY.md  INSTANCE-LIFECYCLE-DESIGN.md  IdlImport-design.md  JSON-DESCRIPTOR-MIGRATION-GUIDE.md  JSON-MIGRATION-SUMMARY.md  KEYED-TOPICS-AND-READ-PATH-OPTIMIZATION.md  NESTED-STRUCT-SUPPORT-DESIGN.md  ROUNDTRIP-ADDING-TESTS.md  ROUNDTRIP-DESIGN.md  ROUNDTRIP-TESTING-INDEX.md  SERDATA-INTEGRATION-GUIDE.md  SERDATA-TASK-MASTER.md  appendable-unions.md  cdr-byte-stream-analysis.md  cdr-serialization-rules.md  cyclone-dds-serdata-api.md  cyclone-dds-xcdr2-serialization-internal.md  ddsc-serdata-api-exposing.md  design-talk.md  instance-management-xcdr2-design-talk.md
src/CycloneDDS.Core/: AlignmentMath.cs  CdrReader.cs  CdrSizer.cs  CdrWriter.cs
src/CycloneDDS.Runtime/: DdsInstanceHandle.cs  DdsParticipant.cs  DdsReader.cs  DdsWriter.cs
tests/: .gitignore
tests/CsharpToC.Roundtrip.Tests/: ArrayTests.cs  AssemblyAttributes.cs  AtomicTestsTypes.cs  AtomicTestsTypes_Part2.cs  BasicPrimitivesAppendableTests.cs  BasicPrimitivesTests.cs  CdrDumper.cs  CompositeKeyTests.cs  CsharpToC.Roundtrip.Tests.csproj  NativeMethods.cs  NestedKeyTests.cs  NestedStructTests.cs  Part2Tests.cs  Program.cs  QUICKSTART.md  README.md  ROUNDTRIP-ANALYSIS-SUMMARY.md  ROUNDTRIP-IMPLEMENTATION-GUIDE.md  ROUNDTRIP-STATUS-ANALYSIS.md  ROUNDTRIP-TASK-TRACKER.md  RoundtripFixture.cs  SequenceTests.cs  SerializerHelper.cs  TestBase.cs  UnionTests.cs
tests/CsharpToC.Roundtrip.Tests/Native/: CMakeLists.txt  atomic_tests_native.c  atomic_tests_part2.c  atomic_tests_updated_content.c  temp_handlers.c  test_registry.c  test_registry.h
tests/CsharpToC.Roundtrip.UnitTests/: CdrDumperTests.cs  CsharpToC.Roundtrip.UnitTests.csproj  SerializerHelperTests.cs  UnitTest1.cs
tests/CycloneDDS.CodeGen.Tests/: CodeGenTestBase.cs  ComplexCombinationTests.cs  CycloneDDS.CodeGen.Tests.csproj  EdgeCaseTests.cs  ErrorHandlingTests.cs  GeneratorIntegrationTests.cs  GeneratorTests.cs  GoldenRigTests.cs  IdlEmitterTests.cs  IdlJsonParserTests.cs  IdlcRunnerTests.cs  ManagedTypesTests.cs  ManagedViewTests.cs  MarshallerTests.cs  MetadataRegistryTests.cs  NativeTypeEmitterTests.cs  NativeTypeValidationTests.cs  PerformanceTests.cs  SchemaDiscoveryTests.cs  SchemaEvolutionTests.cs  SchemaValidatorTests.cs  SerializerEmitterTests.cs  SerializerEmitterVariableTests.cs  UnionManagedViewTests.cs  UnionMarshallerTests.cs  UnionNativeTypeValidationTests.cs  UnionTests.cs
tests/CycloneDDS.Core.Tests/: CdrSizerTests.cs  (+2 more)
tests/CycloneDDS.Roundtrip.Tests/Native/: CMakeLists.txt
tests/CycloneDDS.Roundtrip.Tests/Native/src/: main_dll.c  type_registry.c  type_registry.h
tests/CycloneDDS.Roundtrip.Tests/Native/src/handlers/: handler_basic.c
tests/GoldenRig/: .gitignore  CMakeLists.txt  Golden.c  Golden.h  Golden.idl  GoldenUnion.c  GoldenUnion.h  GoldenUnion.idl  golden_data.txt  golden_data_generator.c
tests/GoldenRig/include/dds/: config.h  export.h  features.h
tests/IdlJson.Tests/: CMakeLists.txt  build_and_run.bat  verification.c  verification.h  verification.idl  verification.json  verifier.c
tools/: README.md  generate-offsets.ps1
(+126 files in other folders)
